<resources>
    <string name="app_name">AgriLink</string>
    <string name="Login_text">Login</string>
    <string name="Login_text2">Log in</string>
    <string name="Submit_btn">Submit</string>
    <string name="nxt_btn">Next</string>
    <string name="Email_phn">Enter E-mail</string>
    <string name="Login_desc">Sign In to continue.</string>
    <string name="Login_Username">User Name</string>
    <string name="Login_Password">Password</string>
    <string name="Login_forget">Forgot Password ?</string>
    <string name="Login_signup">Sign Up</string>
    <string name="Pass_text">Enter Password</string>
    <string name="Name_text">Enter your Name</string>
    <string name="Email_text">Enter your Email</string>
    <string name="Pass2_text">Enter your Password</string>
    <string name="Phone_text">Enter your Phone Number</string>
    <string name="Role">Want to Register As ?</string>
    <string name="Create_acc_text">Create new\n\u00A0\u00A0\u00A0Account</string>
    <string name="Already_acc_text">Already Registered ? Log In Here</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Phone_No">Phone No.</string>
    <string name="Pass">Password</string>
    <string name="donthaveacc">Dont\'t have Account ?</string>
    <string name="Forgottext1"> FORG0T </string>
    <string name="Forgottext2"> Password </string>
    <string name="Forgottext3"> Provide your account\'s registered email for which you want to reset your password! </string>
    <string-array name="roles_array">
        <item>Select your role</item>
        <item>Farmer</item>
        <item>Merchant</item>
        <item>Landlord</item>
        <item>Industry</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Confirm_Pass_text">Re-Enter your Password</string>
    <string name="Confirm_Pass">Confirm Password</string>
</resources>