<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/drkgreen_clr">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        android:layout_marginTop="30dp"
        android:layout_marginRight="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/backText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Login"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/backImage"
        app:layout_constraintStart_toEndOf="@id/backImage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="290dp"
        android:layout_marginTop="9dp"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <RelativeLayout
        android:id="@+id/curvedbg_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_container2"
        android:padding="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create_acc_text"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/loghere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Already_acc_text"
            android:textSize="15sp"
            android:layout_below="@id/create_acc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/regisname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="20sp"
            android:layout_below="@id/loghere"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/regisnamefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name_text"
            android:layout_below="@id/regisname"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_bg"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/regisEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="20sp"
            android:layout_below="@id/regisnamefield"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/regisEmailfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_text"
            android:layout_below="@id/regisEmail"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_bg"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/regisPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone_No"
            android:textSize="20sp"
            android:layout_below="@id/regisEmailfield"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/regisPhonefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_text"
            android:layout_below="@id/regisPhone"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_bg"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/regisPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pass"
            android:textSize="20sp"
            android:layout_below="@id/regisPhonefield"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/regisPassfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Pass2_text"
            android:layout_below="@id/regisPass"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_bg"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/regisRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Role"
            android:textSize="20sp"
            android:layout_below="@id/regisPassfield"
            android:layout_marginTop="16dp" />
        <Spinner
            android:id="@+id/roleSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/regisRole"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:minHeight="48dp"
            android:background="@drawable/spinner_bg"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:text="@string/Submit_btn"
            android:textStyle="bold"
            android:background="@drawable/loginbtn"
            android:layout_below="@id/roleSpinner" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
