<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotpas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity"
    android:background="@color/Pista_clr">

<ImageView
        android:id="@+id/backbtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back2"
        android:layout_margin="15dp"/>
    <RelativeLayout
        android:id="@+id/rectangular_container"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_container2"
        android:padding="20dp">
    <ImageView
        android:id="@+id/locklogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lock2"
        android:layout_margin="30dp"/>

    <TextView
        android:id="@+id/forgot1"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/Forgottext1"
        android:layout_below="@id/locklogo"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginTop="-15dp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/forgot2"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/Forgottext2"
        android:layout_below="@id/locklogo"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/forgot3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:textSize="12sp"
        android:text="@string/Forgottext3"
        android:layout_below="@id/locklogo"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/femail"
        android:layout_width="430dp"
        android:layout_height="60dp"
        android:ems="18"
        android:layout_marginTop="5dp"
        android:hint="@string/Email_text"
        android:layout_below="@id/forgot3"
        android:inputType="text"
        android:autofillHints="emailAddress"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_filled_bg"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nxtbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:text="@string/nxt_btn"
            android:textStyle="bold"
            android:background="@drawable/loginbtn"
            android:layout_below="@id/femail" />
        <TextView
            android:id="@+id/Signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nxtbtn"
            android:text="@string/donthaveacc"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/Signup_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Signup_txt"
            android:text="@string/Login_signup"
            android:layout_marginTop="-25dp"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</RelativeLayout>